examples/test/testpolicy13251.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13251
  namespace: namespace413
spec:
  podSelector:
    matchLabels:
      key10: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value22
          key31: value8
          key34: value34
      podSelector:
        matchLabels:
          key34: value24
